2009-04-17  Dominique Dumont  <dominique.dumont@hp.com> v0.635

	* config-edit: added -dumptype option. -dump can now be used to
	specify a file name

	* lib/Config/Model/Instance.pm (new): Added skip_read parameter

	* lib/Config/Model/Node.pm (new): Added skip_read parameter

2009-04-15  Dominique Dumont  <dominique.dumont@hp.com>

	* config-edit: Fix broken Log4Perl default config. Added -load option

2009-04-11  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/AutoRead.pm (): Reworked doc. Aligned read and
	write specs (now have same parameters). Read and write callback
	are passed an opened file handle if possible. Now use Log::Log4perl.

2009-04-02  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model.pm (include_one_class): Can no longer clobber
	element with 'include' class feature.

2009-03-30  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model.pm (check_class_parameters): Accept summary
	parameter. Summary is optional and will be used either to generate
	user interface or may be used to provide comments in saved
	configuration files.

	* lib/Config/Model/Node.pm (get_help): added options to get either
	summary or description of an element

2009-03-29  Dominique Dumont  <dominique.dumont@hp.com> 

	* config-edit: added -dump and -load options
	
2009-02-24  Dominique Dumont  <dominique.dumont@hp.com> v0.634

	* config-edit: removed kludgy read_root_dir and write_root_dir
	options. For test, only one root_dir can be specified (like Augeas)

	* lib/Config/Model/ListId.pm: auto_create parameter is replaced by
	auto_create_ids (still trap wrong parameter to avoid memory
	problems)
 
	* lib/Config/Model/HashId.pm: auto_create parameter is replaced by
	auto_create_keys

2009-02-19  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/ListId.pm (auto_create_elements): Trap wrong
	auto_create argument (avoid massive memory consumption)

2008-12-23  Dominique Dumont  <dominique.dumont@hp.com> v0.633
